tests/positive/test-success-printstr-1.rooc
// Test print_str with simple str
fun main() -> int {
    print_str("hello");
    return 0;
}

