tests/negative/test-fail-comp2.rooc
fun main() -> int {    
    "hello" == "world";
    return 0;
}